# seeker-anti-virus

./: .env.example  .gitignore  README.md  daemon-blockint-tech:seeker-anti-virus.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/engine/: build.gradle.kts
android/gradle/: libs.versions.toml
android/shodan-native/: build.gradle.kts
android/shodan-native/src/main/cpp/: CMakeLists.txt  shodan_jni.cpp
android/yara-native/: build.gradle.kts  setup-libyara.sh
android/yara-native/src/main/cpp/: CMakeLists.txt  yara_jni.cpp  yara_stub.c
examples/: demo.ts  intercept-demo.ts  llm-demo.ts  ransomware-demo.ts  serve.ts  spoof-demo.ts  threatdb-demo.ts
src/: index.ts  types.ts
src/agent-tools/: tools.ts
src/analyzer/: reportGenerator.ts  riskScorer.ts
src/api/: index.ts  server.ts  x402.ts
src/integrated-scanner/: integratedScanner.ts
src/interception/: index.ts  knownPrograms.ts  mwaWalletEndpoint.ts  screeningPipeline.ts  txDecoder.ts  wire.ts
src/llm/: classifier.ts  openrouter.ts  scanTools.ts
src/monitor/: monitor.ts
src/phishing/: domainSpoof.ts  domainSpoofDetector.ts  index.ts
src/scanner/: behavioralScanner.ts
src/signatures/: signatureDatabase.ts  signatureMatcher.ts
src/threat-db/: backend.ts  index.ts  otaUpdater.ts  (+3 more)
tests/: api.test.ts  behavioral.test.ts  domain-spoof.test.ts  integrated.test.ts  interception.test.ts  llm.test.ts  ransomware.test.ts  signature.test.ts  threat-db.test.ts  yara.test.ts
(+53 files in other folders)
